--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
    },
    "outputs": [],
    "source": [
-    "n\"art vandelay\" # \"ART VANDELAY\""
+    "\"art vandelay\".upper # \"ART VANDELAY\""
    ]
   },
   {
