automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".find('com') # False"
+    "\"art.vandelay@vandelay.co\".index('com') # False"
    ]
   },
   {
