automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".index('com') # False"
+    "\"art.vandelay@vandelay.co\".f('com') # False"
    ]
   },
   {
