--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 7285553335"
+    "\"7285553334\".index(4) # 7285553335"
    ]
   },
   {
