automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -302,7 +302,7 @@
     }
    ],
    "source": [
-    "\"7285553334\".index('4') # 7285553335"
+    "\"7285553334\".index('4') =  # 7285553335"
    ]
   },
   {
