automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -300,7 +300,7 @@
     }
    ],
    "source": [
-    "\"7285553334\".index('4') = '6' # 7285553335"
+    "\"7285553334\".replace('4') =  # 7285553335"
    ]
   },
   {
